ASoC: samsung: Add new samsung-ac97 driver
WiP

Signed-off-by: Tomasz Figa <tomasz.figa@gmail.com>

--- a/sound/soc/samsung/Kconfig
+++ b/sound/soc/samsung/Kconfig
@@ -36,6 +36,10 @@ config SND_S3C24XX_AC97
 	tristate
 	select SND_SOC_AC97_BUS
 
+config SND_SAMSUNG_AC97
+	tristate "Support for Samsung SoC AC97 controller"
+	select SND_SOC_AC97_BUS
+
 config SND_SAMSUNG_SPDIF
 	tristate
 	select SND_SOC_SPDIF
