--- a/arch/arm/boot/dts/s3c64xx.dtsi
+++ b/arch/arm/boot/dts/s3c64xx.dtsi
@@ -99,6 +99,17 @@
 			status = "disabled";
 		};
 
+		ac97: ac97@7f001000 {
+			compatible = "samsung,s3c2410-ac97";
+			reg = <0x7f001000 0x1000>;
+			interrupt-parent = <&vic1>;
+			interrupts = <4>;
+			clock-names = "ac97";
+			clocks = <&clocks PCLK_AC97>;
+			#sound-dai-cells = <1>;
+			status = "disabled";
+		};
+
 		i2c0: i2c@7f004000 {
 			compatible = "samsung,s3c2440-i2c";
 			reg = <0x7f004000 0x1000>;
